--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
     <string name="app_name">Motor-Connect</string>
-    <string name="title_activity_maps">Map</string>
+
+    <string name="string_Yes">Yes</string>
+    <string name="string_No">No</string>
+    <string name="string_OK">OK</string>
+    <string name="string_Cancel">Cancel</string>
+    <string name="string_CANCEL">CANCEL</string>
+    <string name="string_Delete">Delete</string>
+    <string name="string_Crop">Crop</string>
+    <string name="string_DELETE">DELETE</string>
+    <string name="string_CROP">CROP</string>
+    <string name="string_ADD">ADD</string>
+    <string name="string_Clear">Clear</string>
+    <string name="string_Open">Open</string>
+    <string name="string_Copy">Copy</string>
+    <string name="string_Add">Add</string>
+    <string name="string_Add_photo">Add Photo</string>
+    <string name="string_Photo">Photo</string>
+    <string name="string_Retake">Retake</string>
+
 </resources>
