--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="string_Photo">Photo</string>
     <string name="string_Retake">Retake</string>
 
+
+    <string name="curved_text_value">In/Out Facility</string>
+    <string name="home_screen_observations">OBSERVATIONS</string>
+    <string name="total_observations">2375</string>
+    <string name="percent_value">65%</string>
+    <string name="home_screen_observed_compliance">OBSERVED\nCOMPLIANCE</string>
+    <string name="content_description">This is an image…</string>
 </resources>
