Add Setting area scheduler

--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
     the big cheese.</string>
 
+    <string name="setting_schedule_empty">Chua co khu vuc nao\nduoc them vao</string>
+
 </resources>
