--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="btn_huy">Hủy</string>
     <string name="home_area_empty">Thêm\nKhu Vực</string>
 
+    <string name="setting_time_working">Thoi gian hoat dong</string>
+
 
 
 
