--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -31,22 +31,21 @@
     <string name="add_number_van_used">Số van sử dụng</string>
     <string name="btn_chon">Chọn</string>
     <string name="btn_huy">Hủy</string>
+    <string name="btn_accept">Đồng Ý</string>
     <string name="home_area_empty">Thêm\nKhu Vực</string>
 
     <string name="setting_time_working">Thoi gian hoat dong</string>
 
 
-
-
-
-    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
-    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
-    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
-    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
-    the big cheese.</string>
-
     <string name="setting_schedule_empty">Chua co khu vuc nao\nduoc them vao</string>
     <string name="connect_setting_warning">Máy bơm sẽ không hoạt động nếu tất cả\ncác van đều tắt</string>
     <string name="connect_setting_van">Thiết Lập Van Tưới</string>
+    <string name="sms_exit_content">Bạn có chắc muốn thoát khỏi ứng dụng không?</string>
+    <string name="sms_warning_title">Thông Báo</string>
 
+    <string name="sms_review_schedule_content">Bạn có muốn xem lại không?</string>
+    <string name="sms_stop_schedule_content">Bạn có chắc muốn dừng lịch tưới không?</string>
+
+    <string name="sms_receiver_title">Bạn Thông Báo Mới</string>
+    <string name="sms_receiver_empty">Không có thông báo mới</string>
 </resources>
