--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -1,43 +1,28 @@
 <resources>
     <string name="app_name">Motor-Connect</string>
 
-    <string name="string_Yes">Yes</string>
-    <string name="string_No">No</string>
-    <string name="string_OK">OK</string>
-    <string name="string_Cancel">Cancel</string>
-    <string name="string_CANCEL">CANCEL</string>
-    <string name="string_Delete">Delete</string>
-    <string name="string_Crop">Crop</string>
-    <string name="string_DELETE">DELETE</string>
-    <string name="string_CROP">CROP</string>
-    <string name="string_ADD">ADD</string>
-    <string name="string_Clear">Clear</string>
-    <string name="string_Open">Open</string>
-    <string name="string_Copy">Copy</string>
-    <string name="string_Add">Add</string>
-    <string name="string_Add_photo">Add Photo</string>
-    <string name="string_Photo">Photo</string>
-    <string name="string_Retake">Retake</string>
-
-
-    <string name="curved_text_value">In/Out Facility</string>
-    <string name="home_screen_observations">OBSERVATIONS</string>
-    <string name="total_observations">2375</string>
-    <string name="percent_value">65%</string>
-    <string name="home_screen_observed_compliance">OBSERVED\nCOMPLIANCE</string>
-    <string name="content_description">This is an image…</string>
-    <string name="add_input_name_empty">Vui lòng nhập tên khu vực</string>
-    <string name="add_input_phone_empty">Vui lòng nhập số điện thoại</string>
-    <string name="add_number_van_used">Số van sử dụng</string>
+    <!-- Button -->
     <string name="btn_chon">Chọn</string>
     <string name="btn_huy">Hủy</string>
     <string name="btn_accept">Đồng Ý</string>
+
+    <!-- Message Config -->
+    <string name="sms_dung">Dung</string>
+    <string name="sms_loi">Loi</string>
+    <string name="sms_sai_pass">Sai pass</string>
+    <string name="sms_all_area_off">KV Tat</string>
+    <string name="sms_warning">Thông Báo</string>
+
+
+    <string name="add_input_name_empty">Vui lòng nhập tên khu vực</string>
+    <string name="add_input_phone_empty">Vui lòng nhập số điện thoại</string>
+    <string name="add_number_van_used">Số van sử dụng</string>
+
     <string name="home_area_empty">Thêm\nKhu Vực</string>
+    <string name="setting_time_working">Thời gian hoạt động</string>
 
-    <string name="setting_time_working">Thoi gian hoat dong</string>
 
-
-    <string name="setting_schedule_empty">Chua co khu vuc nao\nduoc them vao</string>
+    <string name="setting_schedule_empty">Chưa có khu vực nào\nđược thêm vào</string>
     <string name="connect_setting_warning">Máy bơm sẽ không hoạt động nếu tất cả\ncác van đều tắt</string>
     <string name="connect_setting_van">Thiết Lập Van Tưới</string>
     <string name="sms_exit_content">Bạn có chắc muốn thoát khỏi ứng dụng không?</string>
@@ -45,7 +30,17 @@
 
     <string name="sms_review_schedule_content">Bạn có muốn xem lại không?</string>
     <string name="sms_stop_schedule_content">Bạn có chắc muốn dừng lịch tưới không?</string>
-
     <string name="sms_receiver_title">Bạn Thông Báo Mới</string>
     <string name="sms_receiver_empty">Không có thông báo mới</string>
+
+
+    <string name="setting_schedule_title">Cài Đặt Lich Tưới</string>
+    <string name="setting_schedule_off_all_area">Ngắt tưới trong ngày cho tất\ncả khu vực</string>
+    <string name="setting_schedule_off_description">Tính năng này sẽ ngắt tưới tiêu trong ngày cho tất cả khu vực</string>
+    <string name="setting_schedule">Cài đặt lịch tưới</string>
+    <string name="setting_review_schedule">Xem lại lịch tưới</string>
+    <string name="setting_van_used">Thiết lập van sử dụng</string>
+    <string name="setting_schedule_in_day">Ngắt lịch tưới trong ngày</string>
+    <string name="setting_edit_info_area">Sửa thông tin</string>
+    <string name="setting_title">Cài Đặt</string>
 </resources>
