Refactor code and prepare release v1.1.0

--- a/baseApp/src/main/res/values/strings.xml
+++ b/baseApp/src/main/res/values/strings.xml
@@ -94,5 +94,7 @@
     <string name="weather_speed">Tốc độ gió: %s</string>
     <string name="weather_temp_max">Nhiệt độ max: %s</string>
     <string name="weather_temp_min">Nhiệt độ min: %s</string>
+    <string name="setting_controll_title">Control</string>
+    <string name="setting_controll_apply">Apply</string>
 
 </resources>
